# BUJam2020

./: CMakeLists.txt  README.md  map.txt
Release/: Engine.lib  map.txt
sprites/: New Piskel-20200313-025714.piskel  New Piskel-20200313-025841.piskel  New Piskel-20200313-025907.piskel  Thumbs.db
src/Engine/: Camera.cpp  Camera.h  Core.cpp  Core.h  Engine.h  Entity.h  Input.cpp  Input.h  Sprite.h  SpriteManager.cpp  SpriteManager.h  SpriteRenderer.cpp  SpriteRenderer.h  Time.h
src/Game/: BackgroundRenderer.cpp  BackgroundRenderer.h  BlobCollector.cpp  BlobCollector.h  BlobParticle.cpp  BlobParticle.h  BlobUI.cpp  BlobUI.h  Game.cpp  Game.h  Map.cpp  Map.h  Patrol.cpp  Patrol.h  PlayerCollision.cpp  PlayerCollision.h  PlayerDeath.cpp  PlayerDeath.h  PlayerMovement.cpp  PlayerMovement.h  PlayerPunch.cpp  PlayerPunch.h  PlayerState.cpp  PlayerState.h  main.cpp
